# KnowsPackage

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.cursor/skills/bottleneck-hunter/: SKILL.md
.cursor/skills/dyp-ask/: SKILL.md
.cursor/skills/earnings-review/: SKILL.md
.cursor/skills/earnings-team/: SKILL.md
.cursor/skills/financial-data/: SKILL.md
.cursor/skills/financial-research/analyzing-china-macro/: SKILL.md
.cursor/skills/financial-research/analyzing-global-macro/: SKILL.md
.cursor/skills/financial-research/daily-financial-briefing/: SKILL.md
.cursor/skills/financial-research/gathering-financial-news/: SKILL.md
.cursor/skills/financial-research/generating-actionable-insights/: SKILL.md
.cursor/skills/industry-funnel/: SKILL.md
.cursor/skills/industry-research/: SKILL.md
.cursor/skills/investment-checklist/: SKILL.md
.cursor/skills/investment-research/: SKILL.md
.cursor/skills/investment-team/: SKILL.md
.cursor/skills/management-deep-dive/: SKILL.md
.cursor/skills/news-pulse/: SKILL.md
.cursor/skills/portfolio-review/: SKILL.md
.cursor/skills/private-company-research/: SKILL.md
.cursor/skills/quality-screen/: SKILL.md
.cursor/skills/thesis-drift/: SKILL.md
.cursor/skills/thesis-tracker/: SKILL.md
.cursor/skills/wechat-article/: SKILL.md
docs/superpowers/specs/: 2026-07-07-sl-research-framework-design.md
scripts/: install-ai-berkshire.sh
src/sl/: __init__.py  cli.py  core.py  exec.py  frameworks.py
tests/: test_cli.py  test_core.py  test_exec.py  test_frameworks.py
(+2 files in other folders)
