[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sl"
version = "0.1.0"
description = "A CLI + library framework for research knowledge management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SL" }]
dependencies = [
    "typer>=0.12",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
sl = "sl.cli:app"

# Built-in research frameworks are registered as entry points so that
# third parties can add their own frameworks the same way.
[project.entry-points."sl.frameworks"]
literature-note = "sl.frameworks:LiteratureNote"
experiment-log = "sl.frameworks:ExperimentLog"
zettel = "sl.frameworks:Zettel"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer relies on function calls (Argument/Option) as default values.
extend-immutable-calls = ["typer.Argument", "typer.Option"]
